--- a/demos/button/buttonssample.component.html
+++ b/demos/button/buttonssample.component.html
@@ -1,39 +1,43 @@
 <h1 class="componentTitle">Button</h1>
 <p class="componentDesc">A directive that applies button functionality to an element.</p>
 
-<div class="flex-container flex-wrap space-wrapper justify-content-start">
+<div class="flex-column  space-wrapper justify-content-start">
 
-    <span igButton="raised" igRipple="white">Raised</span>
+    <div class="flex-container flex-wrap justify-content-b">
+        <span igButton="raised" igRipple="white">Raised</span>
 
-    <span igButton="flat" igRipple>Flat</span>
+        <span igButton="flat" igRipple>Flat</span>
 
-    <span igButton="raised" igButtonColor="#FBB13C" igButtonBackground="#340068" igRipple="white">Raised Custom</span>
+        <span igButton="raised" igButtonColor="#FBB13C" igButtonBackground="#340068" igRipple="white">Raised Custom</span>
 
-    <span igButton="raised" igButtonColor="yellow" igButtonBackground="black" igRipple="yellow">Raised Custom</span>
+        <span igButton="gradient" igRipple="white">Gradient</span>
 
-    <span igButton="gradient" igRipple="white">Gradient</span>
+        <span igButton="raised" disabled>Disabled</span>
+    </div>
 
-    <span igButton="raised" disabled>Disabled</span>
+    <div class="special-position flex-column">
+        <span igButton="fab" igButtonColor="#484848" igButtonBackground="white" igRipple="#484848">
+            <i class="material-icons">edit</i>
+        </span>
 
-    <span igButton="fab" igRipple="white">
-        <i class="material-icons">add</i>
-    </span>
+        <span igButton="fab" igRipple="white">
+            <i class="material-icons">add</i>
+        </span>
+    </div>
 
-    <span igButton="fab" igButtonColor="#484848" igButtonBackground="white" igRipple="#484848">
-        <i class="material-icons">edit</i>
-    </span>
+    <div class="flex-container">
+        <span igButton="icon" igRipple igRippleCentered="true">
+            <i class="material-icons">search</i>
+        </span>
 
-    <span igButton="icon" igRipple igRippleCentered="true">
-        <i class="material-icons">search</i>
-    </span>
+        <span igButton="icon" igRipple igButtonColor="#E41C77" igRippleCentered="true">
+            <i class="material-icons">favorite</i>
+        </span>
 
-    <span igButton="icon" igRipple igButtonColor="#E41C77" igRippleCentered="true">
-        <i class="material-icons">favorite</i>
-    </span>
-
-    <span igButton="icon" igRipple igRippleCentered="true">
-        <i class="material-icons">more_vert</i>
-    </span>
+            <span igButton="icon" igRipple igRippleCentered="true">
+            <i class="material-icons">more_vert</i>
+        </span>
+    </div>
 </div>
 
 
