(fix) avatar images (fix) carousel images (improve) carousel styling (still tons of work needed)

--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -12,11 +12,11 @@
                 </ig-avatar>
             </td>
             <td>
-                <ig-avatar src="https://unsplash.it/60/60?image=55">
+                <ig-avatar src="http://lorempixel.com/300/300/people/6/">
                 </ig-avatar>
             </td>
             <td>
-                <ig-avatar src="https://unsplash.it/60/60?image=55" [initials]="initials"
+                <ig-avatar src="http://lorempixel.com/300/300/people/9/" [initials]="initials"
                     [bgColor]="bgColor" [roundShape]="roundShape">
                 </ig-avatar>
             </td>
