Commit changes related to naming conventions

--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -4,7 +4,7 @@
         <tr>
             <td>
                 <ig-avatar [src]="src" [roundShape]="roundShape">
-                    <ig-badge type="warning" value="8"></ig-badge>
+                    <igx-badge type="warning" value="8"></igx-badge>
                 </ig-avatar>
             </td>
             <td>
@@ -37,31 +37,31 @@
             <td>
                 <ig-avatar initials="ZK" width="100" roundShape="true"
                     bgColor="#ff6978">
-                    <ig-badge type="error" value="222" position="bottom-left"></ig-badge>
+                    <igx-badge type="error" value="222" position="bottom-left"></igx-badge>
                 </ig-avatar>
             </td>
             <td>
                 <ig-avatar initials="HA" width="100" size="potatos"
                     bgColor="#340068">
-                    <ig-badge type="info" position="top-right"></ig-badge>
+                    <igx-badge type="info" position="top-right"></igx-badge>
                 </ig-avatar>
             </td>
             <td>
                 <ig-avatar initials="PP" width="100" color="black" icon="person"
                     roundShape="false" bgColor="#94feed">
-                    <ig-badge icon="link" position="invalid"></ig-badge>
+                    <igx-badge icon="link" position="invalid"></igx-badge>
                 </ig-avatar>
             </td>
             <td>
                 <ig-avatar initials="PP" size="medium" roundShape="false"
                     bgColor="#e41c77">
-                    <ig-badge type="success" icon="done" position="bottom-right"></ig-badge>
+                    <igx-badge type="success" icon="done" position="bottom-right"></igx-badge>
                 </ig-avatar>
             </td>
             <td>
                 <ig-avatar initials="ZK" size="large" roundShape="true"
                     bgColor="#484848">
-                    <ig-badge type="success" icon="done" position="top-right"></ig-badge>
+                    <igx-badge type="success" icon="done" position="top-right"></igx-badge>
                 </ig-avatar>
             </td>
             <td>
