(update) component samples updated

--- a/demos/button/buttonssample.component.html
+++ b/demos/button/buttonssample.component.html
@@ -4,15 +4,15 @@
 <div class="flex-column  space-wrapper justify-content-start">
 
     <div class="flex-container flex-wrap justify-content-b">
-        <span igButton="raised" igRipple="white">Raised</span>
+        <button igButton="flat" igRipple>Flat</button>
 
-        <span igButton="flat" igRipple>Flat</span>
+        <button igButton="raised" igRipple="white">Raised</button>
 
-        <span igButton="raised" igButtonColor="#FBB13C" igButtonBackground="#340068" igRipple="white">Raised Custom</span>
+        <button igButton="raised" igButtonColor="#FBB13C" igButtonBackground="#340068" igRipple="white">Raised Custom</button>
 
-        <span igButton="gradient" igRipple="white">Gradient</span>
+        <button igButton="gradient" igRipple="white">Gradient Button</button>
 
-        <span igButton="raised" disabled>Disabled</span>
+        <button igButton="raised" [disabled]="true">Disabled</button>
     </div>
 
     <div class="special-position flex-column">
