Changed double quotes to single quotes inside of snackbar component and samples, added readme for the snackbar component

--- a/demos/app/snackbar/sample.component.html
+++ b/demos/app/snackbar/sample.component.html
@@ -1,7 +1,7 @@
 <div class="color-holder" [style.backgroundColor]="color">
 </div>
 
-<button igButton="flat" (click)="changeColor(snackbar)">Click</button>
+<button igButton="flat" (click)="changeColor(snackbar)">Change color</button>
 
 <ig-snackbar #snackbar
              [message]="message"
