(update) samples and descriptions

--- a/demos/avatar/avatarsample.component.html
+++ b/demos/avatar/avatarsample.component.html
@@ -1,7 +1,6 @@
 <h1 class="componentTitle">Avatar</h1>
-<p class="componentDesc">A directive that displays an image or text as an avatar.</p>
+<p class="componentDesc">A component that displays an image, text or icon as avatar.</p>
 <div class="flex-container flex-wrap space-wrapper justify-content-center">
-
     <ig-avatar src="http://lorempixel.com/300/300/people/6/" roundShape="false">
         <ig-badge type="error" icon="favorite" position="bottom-right"></ig-badge>
     </ig-avatar>
