--- a/styles/_override.scss
+++ b/styles/_override.scss
@@ -169,7 +169,7 @@ pre[class*=language-]
   > span,
   ig-avatar
   {
-    margin : em(5);
+    margin : em(10) em(5);
   }
   padding-bottom : em(40);
 }
