--- a/demos/tabbar/tabbarsample.component.html
+++ b/demos/tabbar/tabbarsample.component.html
@@ -1,16 +1,16 @@
 <h1 class="componentTitle">TabBar</h1>
 <ig-tab-bar igRipple igRippleTarget="ul" alignment="bottom">
 
-    <ig-tab label="Tab 1" icon="library_music">
-        <p class="componentDesc">IgTabBar allow you to tabulate your content. It provides flexible ways to manage and navigate through your tabularized data. </p>
+    <ig-tab label="Music" icon="library_music">
+        <p class="componentDesc">The IgTabBar allows you to tabulate your content. It provides flexible ways to manage and navigate through your tabularized data.</p>
     </ig-tab>
 
-    <ig-tab label="Tab 2" icon="video_library">
-        <p class="componentDesc">You can style each tab with a material icon as demosntrated below.
+    <ig-tab label="Videos" icon="video_library">
+        <p class="componentDesc">You can style each tab with any icon form the material icon set as demonstrated below.</p>
     </ig-tab>
 
-    <ig-tab label="Tab 3" icon="library_books">
-        <p class="componentDesc">Attaching to click events allow you to customize the way your TabBar is working.
+    <ig-tab label="Books" icon="library_books">
+        <p class="componentDesc">Listening for click events allows you to customize the way your Tab bar works.</p>
     </ig-tab>
 
 </ig-tab-bar>
