Added initial tests and changed actionName to actionText

--- a/demos/app/snackbar/sample.component.html
+++ b/demos/app/snackbar/sample.component.html
@@ -5,5 +5,5 @@
 
 <ig-snackbar #snackbar
              [message]="message"
-             [actionName]="actionName"
+             [actionText]="actionName"
              (onAction)="undoColorChange(snackbar)"></ig-snackbar>
