Added import for scc in themes

--- a/src/themes/zero-blocks.scss
+++ b/src/themes/zero-blocks.scss
@@ -10,3 +10,4 @@
 
 // old way of importing each individual module sass file
 @import "../carousel/carousel";
+@import "../snackbar/snackbar.component";
