Renamed Modal to Dialog.

--- a/src/themes/material/modules/_index.scss
+++ b/src/themes/material/modules/_index.scss
@@ -10,6 +10,6 @@
 @import 'badges';
 @import 'ripple';
 @import 'nav-drawer';
-@import 'modal';
+@import 'dialog';
 @import 'navbar';
 @import 'icon';
