--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -437,29 +437,29 @@ $list-item-tl-height: em(72px) !default;
 $list-item-tl-sl-color: #757575 !default;
 /* Rectangle: */
 
-/* 24. Modal
+/* 24. Dialog
    ========================================================================== */
 
-$modal-transition: background .25s ease-out;
-$modal-max-width: em(400px);
-$modal-min-width: em(280px);
-$modal-padding: em(12px, 16px) em(24px, 16px);
-$modal-background: $white;
-$modal-border-radius: 2px;
+$dialog-transition: background .25s ease-out;
+$dialog-max-width: em(400px);
+$dialog-min-width: em(280px);
+$dialog-padding: em(12px, 16px) em(24px, 16px);
+$dialog-background: $white;
+$dialog-border-radius: 2px;
 
-$modal-title-font-size: em(20px, 16px);
-$modal-title-line-height: em(16px, 16px);
-$modal-title-padding: em(12px) 0;
-$modal-title-padding-top: em(12px);
-$modal-title-padding-bottom: em(10px);
-$modal-title-font-weight: 600;
+$dialog-title-font-size: em(20px, 16px);
+$dialog-title-line-height: em(16px, 16px);
+$dialog-title-padding: em(12px) 0;
+$dialog-title-padding-top: em(12px);
+$dialog-title-padding-bottom: em(10px);
+$dialog-title-font-weight: 600;
 
 
-$modal-message-font-size: em(16px, 16px);
-$modal-message-line-height: em(18px, 16px);
-$modal-message-padding-top: em(10px);
-$modal-message-padding-bottom: em(12px);
-$modal-message-font-weight: 400;
+$dialog-message-font-size: em(16px, 16px);
+$dialog-message-line-height: em(18px, 16px);
+$dialog-message-padding-top: em(10px);
+$dialog-message-padding-bottom: em(12px);
+$dialog-message-font-weight: 400;
 
-$modal-actions-padding: em(8px);
-$modal-actions-margin: 0 em(-24px, 16px) em(-12px, 16px) em(-24px, 16px);
+$dialog-actions-padding: em(8px);
+$dialog-actions-margin: 0 em(-24px, 16px) em(-12px, 16px) em(-24px, 16px);
