--- a/src/themes/material/modules/_dialog.scss
+++ b/src/themes/material/modules/_dialog.scss
@@ -1,19 +1,19 @@
-@include b(ig-modal) {
-    @extend %igx-modal-display;
+@include b(igx-dialog) {
+    @extend %igx-dialog-display;
     
     @include e(window) {
-        @extend %igx-modal-window;
+        @extend %igx-dialog-window;
 
         @include e(title, true) {
-            @extend %igx-modal-title;
+            @extend %igx-dialog-title;
         }
         
         @include e(content, true) {
-            @extend %igx-modal-content;
+            @extend %igx-dialog-content;
         }
 
         @include e(actions, true) {
-            @extend %igx-modal-actions;
+            @extend %igx-dialog-actions;
             button ~ button {
                 margin-left: 8px;
             }
@@ -21,6 +21,6 @@
     }
 
     @include m(hidden) {
-        @extend %igx-modal--hidden;
+        @extend %igx-dialog--hidden;
     }
 }
