(fix) images header url

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,6 +1,6 @@
 .header-bkg
 {
-  background    : url("./../../demos/images/bkg.jpg") no-repeat scroll top;
+  background    : url("./../demos/images/bkg.jpg") no-repeat scroll top;
   min-height    : 500px;
   padding-top   : em(40);
   margin-bottom : em(150);
