(add) links to fork repository (add) preview badges to components

--- a/demos/app.component.html
+++ b/demos/app.component.html
@@ -11,11 +11,11 @@
                     <ul (click)="navItemClick($event)">
                         <li #item [routerLinkActive]="'active'"><a><span data-demo="switch" routerLink="/switch">Switch</span></a></li>
                         <li #item [routerLinkActive]="'active'"><a><span data-demo="radio" routerLink="/radio">Radio</span></a></li>
-                        <li #item [routerLinkActive]="'active'"><a><span data-demo="carousel" routerLink="/carousel">Carousel</span></a></li>
-                        <li #item [routerLinkActive]="'active'"><a><span data-demo="tabbar" routerLink="/tabbar">Tabbar</span></a></li>
-                        <li #item [routerLinkActive]="'active'"><a><span data-demo="list" routerLink="/list">List</span></a></li>
+                        <li #item [routerLinkActive]="'active'"><a><span data-demo="carousel" routerLink="/carousel">Carousel</span><span class="badge preview">preview</span></a></li>
+                        <li #item [routerLinkActive]="'active'"><a><span data-demo="tabbar" routerLink="/tabbar">Tabbar</span><span class="badge preview">preview</span></a></li>
+                        <li #item [routerLinkActive]="'active'"><a><span data-demo="list" routerLink="/list">List</span><span class="badge preview">preview</span></a></li>
                         <li #item [routerLinkActive]="'active'"><a><span data-demo="avatar" routerLink="/avatar">Avatar</span></a></li>
-                        <li #item [routerLinkActive]="'active'"><a><span data-demo="navdrawer" routerLink="/navigation-drawer">Navigation Drawer</span></a></li>
+                        <li #item [routerLinkActive]="'active'"><a><span data-demo="navdrawer" routerLink="/navigation-drawer">Navigation Drawer</span><span class="badge preview">preview</span></a></li>
                     </ul>
                 </nav>
                 <nav class="nav-list nav-directives">
