Update snackbar to the new naming conventions

--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -3,7 +3,7 @@
     <table>
         <tr>
             <td>
-                <igx-avatar [src]="src" [round-shape]="roundShape">
+                <igx-avatar [src]="src" [roundShape]="roundShape">
                     <igx-badge type="warning" value="8"></igx-badge>
                 </igx-avatar>
             </td>
@@ -17,50 +17,50 @@
             </td>
             <td>
                 <igx-avatar src="https://unsplash.it/60/60?image=55" [initials]="initials"
-                    [bg-color]="bgColor" [round-shape]="roundShape">
+                    [bgColor]="bgColor" [roundShape]="roundShape">
                 </igx-avatar>
             </td>
             <td>
-                <igx-avatar initials="RK" bg-color="#fbb13c">
+                <igx-avatar initials="RK" bgColor="#fbb13c">
                 </igx-avatar>
             </td>
             <td>
-                <igx-avatar initials="AA" bg-color="#731963" round-shape="true">
+                <igx-avatar initials="AA" bgColor="#731963" roundShape="true">
                 </igx-avatar>
             </td>
             <td>
-                <igx-avatar round-shape="true" icon="person" bg-color="#0375be" data-init="SS">
+                <igx-avatar roundShape="true" icon="person" bgColor="#0375be" data-init="SS">
                 </igx-avatar>
             </td>
         </tr>
         <tr>
             <td>
-                <igx-avatar initials="ZK" width="100" round-shape="true"
-                    bg-color="#ff6978">
+                <igx-avatar initials="ZK" width="100" roundShape="true"
+                    bgColor="#ff6978">
                     <igx-badge type="error" value="222" position="bottom-left"></igx-badge>
                 </igx-avatar>
             </td>
             <td>
                 <igx-avatar initials="HA" width="100" size="potatos"
-                    bg-color="#340068">
+                    bgColor="#340068">
                     <igx-badge type="info" position="top-right"></igx-badge>
                 </igx-avatar>
             </td>
             <td>
                 <igx-avatar initials="PP" width="100" color="black" icon="person"
-                    round-shape="false" bg-color="#94feed">
+                    roundShape="false" bgColor="#94feed">
                     <igx-badge icon="link" position="invalid"></igx-badge>
                 </igx-avatar>
             </td>
             <td>
-                <igx-avatar initials="PP" size="medium" round-shape="false"
-                    bg-color="#e41c77">
+                <igx-avatar initials="PP" size="medium" roundShape="false"
+                    bgColor="#e41c77">
                     <igx-badge type="success" icon="done" position="bottom-right"></igx-badge>
                 </igx-avatar>
             </td>
             <td>
-                <igx-avatar initials="ZK" size="large" round-shape="true"
-                    bg-color="#484848">
+                <igx-avatar initials="ZK" size="large" roundShape="true"
+                    bgColor="#484848">
                     <igx-badge type="success" icon="done" position="top-right"></igx-badge>
                 </igx-avatar>
             </td>
