--- a/demos/app/snackbar/sample.component.html
+++ b/demos/app/snackbar/sample.component.html
@@ -1,9 +1,9 @@
 <div class="color-holder" [style.backgroundColor]="color">
 </div>
 
-<button igButton="flat" (click)="changeColor(snackbar)">Change color</button>
+<button igxButton="flat" (click)="changeColor(snackbar)">Change color</button>
 
-<ig-snackbar #snackbar
+<igx-snackbar #snackbar
              [message]="message"
              [actionText]="actionName"
-             (onAction)="undoColorChange(snackbar)"></ig-snackbar>
+             (onAction)="undoColorChange(snackbar)"></igx-snackbar>
