--- a/demos/app/carousel/sample.component.html
+++ b/demos/app/carousel/sample.component.html
@@ -1,5 +1,5 @@
 <h3>Carousel</h3>
-<div style="width: 100%;">
+<div>
     <ig-carousel [interval]="interval" [pause]="pause" [loop]="loop">
         <ig-slide *ngFor="let slide of slides;" [active]="slide.active">
             <img [src]="slide.image">
