(update) sample references to new selector names

--- a/demos/app/button/sample.component.html
+++ b/demos/app/button/sample.component.html
@@ -30,7 +30,7 @@
 </div>
 <br>
 <div style="margin: 0 20px">
-    <button type="button" igxButton="fab" igxButton-color="#484848" igxButtonBackground="white" igxRipple="#484848">
+    <button type="button" igxButton="fab" igxButtonColor="#484848" igxButtonBackground="white" igxRipple="#484848">
         <i class="material-icons">edit</i>
     </button>
 </div>
