--- a/src/snackbar/snackbar.component.html
+++ b/src/snackbar/snackbar.component.html
@@ -1,4 +1,4 @@
 <div class="ig-snackbar" *ngIf="isVisible">
     <span>{{ message }}</span>
-    <button *ngIf="actionText" igButton="flat" (click)="_triggerAction(snackbar)">{{ actionText }}</button>
+    <button *ngIf="actionText" igxButton="flat" (click)="_triggerAction(snackbar)">{{ actionText }}</button>
 </div>
