Finished dialog renaming.

--- a/demos/app/dialog/sample.component.html
+++ b/demos/app/dialog/sample.component.html
@@ -44,12 +44,12 @@
         rightButtonColor="white"
         backgroundClick="true">
         <div class="ig-form-group">
-            <input type="text" igInput />
-            <label igxLabel>Username</label>
+            <input type="text" igx-input />
+            <label igx-label>Username</label>
         </div>
         <div class="ig-form-group">
-            <input type="password" igInput />
-            <label igxLabel>Password</label>
+            <input type="password" igx-input />
+            <label igx-label>Password</label>
         </div>
     </igx-dialog>
 </div>
