(fix) circular progress bar circumference not set properly (add) second gray circle to the progress bar component (improve) carousel styling

--- a/src/progressbar/styles/circular-bar.style.css
+++ b/src/progressbar/styles/circular-bar.style.css
@@ -30,7 +30,7 @@
     fill: transparent;
     stroke: url(#linear);
     stroke-width: 6;
-    stroke-linecap: square;
+    stroke-linecap: round;
     stroke-dashoffset: 289;
     stroke-dasharray: 289;
     transform-origin: 50% 50%;
