--- a/src/progressbar/templates/circular-bar.component.html
+++ b/src/progressbar/templates/circular-bar.component.html
@@ -5,6 +5,7 @@
         <stop offset="100%" stop-color="cyan"/>
         </linearGradient>
     </defs>
-    <circle #circle class="progress-circular__circle" cx="50" cy="50" r="46" id="blue-halo"/>
+    <circle #circle class="progress-circular__circle" cx="50" cy="50" r="46"/>
+    <circle cx="50" cy="50" r="46" stroke="gray" stroke-width="6" stroke-opacity=".15" fill="transparent"/>
     <text #text class="progress-circular__text" id="myTimer" text-anchor="middle" x="50" y="60">{{_valueInPercent}}%</text>
 </svg>
