--- a/src/themes/material/extends/_carousel.scss
+++ b/src/themes/material/extends/_carousel.scss
@@ -106,6 +106,8 @@
 
 
 %igx-carousel-slide {
+    width: 100%;
+    height: 100%;
     position: relative;
     display: none;
     transition: .5s ease-in-out left;
@@ -114,7 +116,7 @@
 }
 
 %igx-carousel-slide img {
-    width: 100%;
-    height: 100%;
+    width: inherit;
+    height: inherit;
     transform: scale(1.01);
 }
