--- a/demos/app/dialog/sample.component.html
+++ b/demos/app/dialog/sample.component.html
@@ -42,7 +42,7 @@
         rightButtonLabel="Sign In"
         rightButtonBackgroundColor="#0375be"
         rightButtonColor="white"
-        backgroundClick="true">
+        closeOnOutsideSelect="true">
         <div class="ig-form-group">
             <input type="text" igx-input />
             <label igx-label>Username</label>
